--- a/microsoft-resnet-50.ipynb
+++ b/microsoft-resnet-50.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vuphamas/code/img-text-classification/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -26,6 +17,7 @@
     "import numpy as np\n",
     "from tqdm import tqdm\n",
     "import os\n",
+    "import joblib\n",
     "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
@@ -279,7 +271,6 @@
     "            model, label_encoder = train_trademark_classifier(valid_df, level, img_dir)\n",
     "            \n",
     "            # Save label encoder for later use\n",
-    "            import joblib\n",
     "            joblib.dump(label_encoder, f'label_encoder_{level}.pkl')\n",
     "            print(f\"\\nModel and label encoder for {level} saved successfully\")\n",
     "            \n",
@@ -290,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Checking images: 100%|██████████| 158511/158511 [03:26<00:00, 766.65it/s]  \n"
+      "Checking images: 100%|██████████| 158511/158511 [01:38<00:00, 1616.43it/s] \n"
      ]
     },
     {
@@ -336,7 +327,213 @@
       "- classifier.1.bias: found shape torch.Size([1000]) in the checkpoint and torch.Size([30]) in the model instantiated\n",
       "- classifier.1.weight: found shape torch.Size([1000, 2048]) in the checkpoint and torch.Size([30, 2048]) in the model instantiated\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Epoch 1/10:  24%|██▍       | 541/2261 [10:09:18<32:17:10, 67.58s/it]    \n"
+      "Epoch 1/10: 100%|██████████| 2261/2261 [17:40<00:00,  2.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10:\n",
+      "Train Loss: 2.2277, Train Acc: 39.41%\n",
+      "Val Loss: 1.9652, Val Acc: 44.01%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10: 100%|██████████| 2261/2261 [17:57<00:00,  2.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10:\n",
+      "Train Loss: 1.8848, Train Acc: 46.59%\n",
+      "Val Loss: 1.8066, Val Acc: 48.80%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10: 100%|██████████| 2261/2261 [17:33<00:00,  2.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10:\n",
+      "Train Loss: 1.7682, Train Acc: 50.17%\n",
+      "Val Loss: 1.7288, Val Acc: 51.25%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10: 100%|██████████| 2261/2261 [17:35<00:00,  2.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10:\n",
+      "Train Loss: 1.6868, Train Acc: 52.46%\n",
+      "Val Loss: 1.6712, Val Acc: 53.02%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10: 100%|██████████| 2261/2261 [17:20<00:00,  2.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10:\n",
+      "Train Loss: 1.6184, Train Acc: 54.38%\n",
+      "Val Loss: 1.6338, Val Acc: 53.95%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10: 100%|██████████| 2261/2261 [17:12<00:00,  2.19it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10:\n",
+      "Train Loss: 1.5610, Train Acc: 55.76%\n",
+      "Val Loss: 1.6043, Val Acc: 54.96%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10: 100%|██████████| 2261/2261 [17:18<00:00,  2.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10:\n",
+      "Train Loss: 1.5073, Train Acc: 57.36%\n",
+      "Val Loss: 1.5898, Val Acc: 55.34%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10: 100%|██████████| 2261/2261 [17:38<00:00,  2.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10:\n",
+      "Train Loss: 1.4574, Train Acc: 58.68%\n",
+      "Val Loss: 1.5653, Val Acc: 56.12%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10: 100%|██████████| 2261/2261 [17:16<00:00,  2.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10:\n",
+      "Train Loss: 1.4084, Train Acc: 60.03%\n",
+      "Val Loss: 1.5649, Val Acc: 56.52%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10: 100%|██████████| 2261/2261 [17:19<00:00,  2.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10:\n",
+      "Train Loss: 1.3585, Train Acc: 61.24%\n",
+      "Val Loss: 1.5587, Val Acc: 56.76%\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          01       0.43      0.45      0.44      2106\n",
+      "          02       0.50      0.42      0.46      1546\n",
+      "          03       0.50      0.53      0.52      1345\n",
+      "          04       0.00      0.00      0.00       113\n",
+      "          05       0.50      0.50      0.50      1044\n",
+      "          06       0.00      0.00      0.00       123\n",
+      "          07       0.42      0.22      0.29       268\n",
+      "          08       0.00      0.00      0.00        71\n",
+      "          09       0.43      0.13      0.20       165\n",
+      "          10       0.00      0.00      0.00        38\n",
+      "          11       0.00      0.00      0.00        78\n",
+      "          12       0.00      0.00      0.00        16\n",
+      "          13       0.00      0.00      0.00        35\n",
+      "          14       0.00      0.00      0.00       172\n",
+      "          15       0.00      0.00      0.00       102\n",
+      "          16       0.00      0.00      0.00        87\n",
+      "          17       1.00      0.01      0.02       123\n",
+      "          18       0.40      0.01      0.02       177\n",
+      "          19       0.46      0.52      0.49       176\n",
+      "          20       0.00      0.00      0.00       115\n",
+      "          21       0.00      0.00      0.00       116\n",
+      "          22       0.00      0.00      0.00        21\n",
+      "          23       0.00      0.00      0.00        31\n",
+      "          24       0.33      0.09      0.14       854\n",
+      "          25       0.50      0.04      0.08        89\n",
+      "          26       0.63      0.90      0.74      5911\n",
+      "          27       0.00      0.00      0.00        15\n",
+      "          28       0.86      0.70      0.77       536\n",
+      "          29       0.00      0.00      0.00        21\n",
+      "          []       0.00      0.00      0.00         5\n",
+      "\n",
+      "    accuracy                           0.57     15499\n",
+      "   macro avg       0.23      0.15      0.16     15499\n",
+      "weighted avg       0.51      0.57      0.52     15499\n",
+      "\n",
+      "\n",
+      "Model and label encoder for target_h1 saved successfully\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pham_dinh_vu/code/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/pham_dinh_vu/code/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/pham_dinh_vu/code/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
